[gd_scene load_steps=5 format=3 uid="uid://djcbecmu36mcr"]

[ext_resource type="Script" uid="uid://3vp57lu4e4ll" path="res://menu.gd" id="1_lti8b"]

[sub_resource type="Theme" id="Theme_ouk20"]

[sub_resource type="Theme" id="Theme_lti8b"]

[sub_resource type="Theme" id="Theme_mae5d"]

[node name="Menu" type="Control" node_paths=PackedStringArray("options_menu", "main_menu")]
layout_mode = 3
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_lti8b")
options_menu = NodePath("OptionsMenu")
main_menu = NodePath("MainMenu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -9.0
offset_top = -10.0
offset_right = 1271.0
offset_bottom = 708.0

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.351
anchor_top = 0.07
anchor_right = 0.351
anchor_bottom = 0.135
offset_top = -3.0
offset_right = 139.20001
offset_bottom = 27.799995
scale = Vector2(3.17, 3.17)
theme = SubResource("Theme_ouk20")
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 2
text = "Bad Roommate"
horizontal_alignment = 1

[node name="Start" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Quit"

[node name="OptionsMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Background" type="TextureRect" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.34800002
anchor_top = -0.071
anchor_right = -0.34800002
anchor_bottom = -0.071
offset_left = 445.44003
offset_top = 51.120003
offset_right = 1725.4401
offset_bottom = 771.12

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.289
anchor_top = 0.047000002
anchor_right = 0.289
anchor_bottom = 0.047000002
offset_left = 0.07998657
offset_top = 0.15999985
offset_right = 172.07999
offset_bottom = 117.16
scale = Vector2(3.17, 3.17)
theme = SubResource("Theme_lti8b")
theme_override_constants/separation = 20

[node name="OptionsLabel" type="Label" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="VolumeSlider" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_mae5d")

[node name="VolumeLabel" type="Label" parent="OptionsMenu/VBoxContainer/VolumeSlider"]
layout_mode = 2
text = "Volume: "
vertical_alignment = 2

[node name="HSlider" type="HSlider" parent="OptionsMenu/VBoxContainer/VolumeSlider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
value = 100.0

[node name="Back" type="Button" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MainMenu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainMenu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/Back" to="." method="_on_back_pressed"]
